page alignment corrected

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body{
-    margin 0px;
-    padding : 0px;
+    margin 0;
+    padding : 0;
     font-family: font-family: 'Roboto', sans-serif;
 }
 
 .intro-section{
     display : flex;
-    width : 100%;
+    width : 93%;
     padding-left: 7%;
     background-image: url(images/Frame\ 58.jpg);
-    color:hsla(0, 0%, 0%, 0.534);
+    color: hsla(0, 0%, 0%, 0.534);
 }
 
 h1{
@@ -53,7 +53,7 @@ h1{
 
 .mid-section{
     display : flex;
-    width : 100%;
+    width : 93%;
     margin-top: 5%;
     margin-bottom: 5%;
     padding-left: 7%;
@@ -92,8 +92,8 @@ h1{
 
 .recipies-section{
     display : flex;
-    width : 80%;
-    margin-left: 11%;
+    width : 93%;
+    margin-left: 5%;
 }
 
 .reccipies-section-div{
